--- a/css/25-selector.css
+++ b/css/25-selector.css
@@ -1,1 +1,32 @@
 /* CSS 선택자(Selector) */
+
+/* 전체 선택자 */
+* {
+  color: inherit;
+}
+
+/* body 선택자 */
+body {
+  font-family: "SUIT";
+  font-weight: 300;
+  background-color: #000000;
+  color: hsla(110, 100%, 100%, 1);
+  margin: 0;
+}
+
+/* 클래스 선택자 */
+.fancy {
+  font-weight: bold;
+  text-shadow: 4px 4px 3px #77f;
+}
+
+ul.menu{
+	margin: 0;
+	padding-left: 0;
+  color: #f00;
+}
+
+/* 아이디 선택자 */
+#demo {
+  border: red 5px solid;
+}
