--- a/css/26-inheritance-specificity.css
+++ b/css/26-inheritance-specificity.css
@@ -1,4 +1,22 @@
 body {
   font-family: "SUIT";
-  font-weight: 300;
+  font-weight: 700;
+}
+
+.menu {
+  color: gray;
+  font-size: 36px;
+  border: 5px green dashed;
+}
+
+.menu li {
+  background-color: pink !important;
+}
+
+li.pick {
+  background-color: yellow !important;
+}
+
+.menu a {
+  color: inherit;
 }
