--- a/css/27-font.css
+++ b/css/27-font.css
@@ -4,7 +4,7 @@ html {
 
 body {
   font-size: 1rem;
-  font-family: 'Noto Sans KR', sans-serif;
+  font-family: 'Noto Serif KR', serif;
   font-weight: 700;
 }
 
@@ -12,7 +12,10 @@ h1 {
   font-size: 3em;
 }
 
+div {
+  font-size: 4px;
+}
+
 p {
-  font-size: 2em;
-  line-height: 1.5em;
+  line-height: 1.5;
 }
